2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/warn.py:
	  Rename PyCheckerModule's main_code to mainCode to be consistent with
	  other instance variable names.
	  More PEP-8-ifying.
	  More docstrings.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  PEP-8-ify more.  Document _filterDir.  Add _getModuleTokens similar
	  to _getClassTokens.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make function PEP-8.  Comment and restructure.

2010-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make code more PEP-8.
	  If we get pcmodule, reuse it on the next line.

2010-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/utils.py:
	  Add constant for 2.7

2010-12-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/opcodes/opcodes-2.3:
	* doc/opcodes/opcodes-2.4:
	* doc/opcodes/opcodes-2.5:
	* doc/opcodes/opcodes-2.6:
	* doc/opcodes/opcodes-2.7:
	* scripts/opcodes.py:
	  Add a script to list opcodes, and record the results for 5 python
	  versions.

2010-12-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_check.sh:
	  Fix simple typo so it reports number of failed tests.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  Add notes about failing test.
	* test_input/test71.py:
	  comment the lines that really should be unreacheable.
	  They're not the lines the pre-2.5 results actually hit.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/OP.py:
	  Document.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/utils.py:
	  From 2.4 to 2.5, the name for generator code objects changed.